{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 248,
  "lineage": "3d2ee89b-2740-ff59-db00-42890fa32551",
  "resources": [
    {
      "module": "module.alb_internal",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:566115828526:loadbalancer/app/neumo-dev-internal/1859541fb001c570",
            "arn_suffix": "app/neumo-dev-internal/1859541fb001c570",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-neumo-dev-internal-1987845174.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:566115828526:loadbalancer/app/neumo-dev-internal/1859541fb001c570",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "neumo-dev-internal",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00de5135794332a09"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00d977fba2a50ff40"
              },
              {
                "subnet_id": "subnet-03f0878632e0779f5"
              }
            ],
            "subnets": [
              "subnet-00d977fba2a50ff40",
              "subnet-03f0878632e0779f5"
            ],
            "tags": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-internal",
              "Owner": "student@university.edu",
              "Pattern": "HotSpare",
              "Project": "NeumoDiagnostics",
              "Purpose": "InternalLoadBalancer",
              "ReplicationType": "HotSpare",
              "Scenario": "1-Replication",
              "Service": "api-gateway",
              "Team": "NeumoDiagnostics"
            },
            "tags_all": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-internal",
              "Owner": "student@university.edu",
              "Pattern": "HotSpare",
              "Project": "NeumoDiagnostics",
              "Purpose": "InternalLoadBalancer",
              "ReplicationType": "HotSpare",
              "Repository": "NeumoDiagnostics-Docker-1",
              "Scenario": "1-Replication",
              "Service": "api-gateway",
              "Team": "NeumoDiagnostics"
            },
            "vpc_id": "vpc-0c5b5be65746da882",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb_internal.aws_security_group.alb",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_internal",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:566115828526:listener/app/neumo-dev-internal/1859541fb001c570/0086002520d78aa0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "OK",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:566115828526:listener/app/neumo-dev-internal/1859541fb001c570/0086002520d78aa0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:566115828526:loadbalancer/app/neumo-dev-internal/1859541fb001c570",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-internal-http",
              "Owner": "student@university.edu",
              "Pattern": "HotSpare",
              "Project": "NeumoDiagnostics",
              "Purpose": "InternalLoadBalancer",
              "ReplicationType": "HotSpare",
              "Scenario": "1-Availability",
              "Service": "api-gateway",
              "Team": "NeumoDiagnostics"
            },
            "tags_all": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-internal-http",
              "Owner": "student@university.edu",
              "Pattern": "HotSpare",
              "Project": "NeumoDiagnostics",
              "Purpose": "InternalLoadBalancer",
              "ReplicationType": "HotSpare",
              "Repository": "NeumoDiagnostics-Docker-1",
              "Scenario": "1-Availability",
              "Service": "api-gateway",
              "Team": "NeumoDiagnostics"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb_internal.aws_lb.main",
            "module.alb_internal.aws_security_group.alb",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_internal",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "api-gateway",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:566115828526:targetgroup/neumo-dev-api-gateway-tg/7fa70a5af426af96",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:566115828526:listener-rule/app/neumo-dev-internal/1859541fb001c570/0086002520d78aa0/2c22c6200cbe5b09",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:566115828526:listener-rule/app/neumo-dev-internal/1859541fb001c570/0086002520d78aa0/2c22c6200cbe5b09",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:566115828526:listener/app/neumo-dev-internal/1859541fb001c570/0086002520d78aa0",
            "priority": 10,
            "tags": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-api-gateway-rule",
              "Owner": "student@university.edu",
              "Pattern": "HotSpare",
              "Project": "NeumoDiagnostics",
              "Purpose": "InternalLoadBalancer",
              "ReplicationType": "HotSpare",
              "Scenario": "1-Availability",
              "Service": "api-gateway",
              "Team": "NeumoDiagnostics"
            },
            "tags_all": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-api-gateway-rule",
              "Owner": "student@university.edu",
              "Pattern": "HotSpare",
              "Project": "NeumoDiagnostics",
              "Purpose": "InternalLoadBalancer",
              "ReplicationType": "HotSpare",
              "Repository": "NeumoDiagnostics-Docker-1",
              "Scenario": "1-Availability",
              "Service": "api-gateway",
              "Team": "NeumoDiagnostics"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb_internal.aws_lb.main",
            "module.alb_internal.aws_lb_listener.http",
            "module.alb_internal.aws_lb_listener.https",
            "module.alb_internal.aws_lb_target_group.services",
            "module.alb_internal.aws_security_group.alb",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_internal",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "api-gateway",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:566115828526:targetgroup/neumo-dev-api-gateway-tg/7fa70a5af426af96",
            "arn_suffix": "targetgroup/neumo-dev-api-gateway-tg/7fa70a5af426af96",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:566115828526:targetgroup/neumo-dev-api-gateway-tg/7fa70a5af426af96",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:566115828526:loadbalancer/app/neumo-dev-internal/1859541fb001c570"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "neumo-dev-api-gateway-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-api-gateway-tg",
              "Owner": "student@university.edu",
              "Pattern": "HotSpare",
              "Project": "NeumoDiagnostics",
              "Purpose": "InternalLoadBalancer",
              "ReplicationType": "HotSpare",
              "Scenario": "1-Replication",
              "Service": "api-gateway",
              "Team": "NeumoDiagnostics"
            },
            "tags_all": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-api-gateway-tg",
              "Owner": "student@university.edu",
              "Pattern": "HotSpare",
              "Project": "NeumoDiagnostics",
              "Purpose": "InternalLoadBalancer",
              "ReplicationType": "HotSpare",
              "Repository": "NeumoDiagnostics-Docker-1",
              "Scenario": "1-Replication",
              "Service": "api-gateway",
              "Team": "NeumoDiagnostics"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c5b5be65746da882"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_internal",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566115828526:security-group/sg-00de5135794332a09",
            "description": "Security group for internal ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00de5135794332a09",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "neumo-dev-internal-sg",
            "name_prefix": "",
            "owner_id": "566115828526",
            "revoke_rules_on_delete": false,
            "tags": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-internal-sg",
              "Owner": "student@university.edu",
              "Pattern": "HotSpare",
              "Project": "NeumoDiagnostics",
              "Purpose": "InternalLoadBalancer",
              "ReplicationType": "HotSpare",
              "Scenario": "1-Availability",
              "Service": "api-gateway",
              "Team": "NeumoDiagnostics"
            },
            "tags_all": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-internal-sg",
              "Owner": "student@university.edu",
              "Pattern": "HotSpare",
              "Project": "NeumoDiagnostics",
              "Purpose": "InternalLoadBalancer",
              "ReplicationType": "HotSpare",
              "Repository": "NeumoDiagnostics-Docker-1",
              "Scenario": "1-Availability",
              "Service": "api-gateway",
              "Team": "NeumoDiagnostics"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5b5be65746da882"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_public",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:566115828526:loadbalancer/app/neumo-dev-public/babb4a25b952d36c",
            "arn_suffix": "app/neumo-dev-public/babb4a25b952d36c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "neumo-dev-public-1899773425.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:566115828526:loadbalancer/app/neumo-dev-public/babb4a25b952d36c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "neumo-dev-public",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04622cedb5b962e05"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0049864bde9be0eca"
              },
              {
                "subnet_id": "subnet-0b166a74dfc420f44"
              }
            ],
            "subnets": [
              "subnet-0049864bde9be0eca",
              "subnet-0b166a74dfc420f44"
            ],
            "tags": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-public",
              "Owner": "student@university.edu",
              "Pattern": "HotSpare",
              "Project": "NeumoDiagnostics",
              "Purpose": "PublicAccess",
              "Scenario": "1-Replication",
              "Service": "web-frontend",
              "Team": "NeumoDiagnostics"
            },
            "tags_all": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-public",
              "Owner": "student@university.edu",
              "Pattern": "HotSpare",
              "Project": "NeumoDiagnostics",
              "Purpose": "PublicAccess",
              "Repository": "NeumoDiagnostics-Docker-1",
              "Scenario": "1-Replication",
              "Service": "web-frontend",
              "Team": "NeumoDiagnostics"
            },
            "vpc_id": "vpc-0c5b5be65746da882",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb_public.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_public",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:566115828526:listener/app/neumo-dev-public/babb4a25b952d36c/a8c0be12393bc777",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "OK",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:566115828526:listener/app/neumo-dev-public/babb4a25b952d36c/a8c0be12393bc777",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:566115828526:loadbalancer/app/neumo-dev-public/babb4a25b952d36c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-public-http",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Purpose": "PublicAccess",
              "Service": "web-frontend",
              "Team": "NeumoDiagnostics"
            },
            "tags_all": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-public-http",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Purpose": "PublicAccess",
              "Repository": "NeumoDiagnostics-Docker-1",
              "Service": "web-frontend",
              "Team": "NeumoDiagnostics"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb_public.aws_lb.main",
            "module.alb_public.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_public",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "web-frontend",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:566115828526:targetgroup/neumo-dev-web-frontend-tg/2c8de1e2260a53a2",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:566115828526:listener-rule/app/neumo-dev-public/babb4a25b952d36c/a8c0be12393bc777/11e68a0bb0e255c7",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:566115828526:listener-rule/app/neumo-dev-public/babb4a25b952d36c/a8c0be12393bc777/11e68a0bb0e255c7",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:566115828526:listener/app/neumo-dev-public/babb4a25b952d36c/a8c0be12393bc777",
            "priority": 100,
            "tags": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-web-frontend-rule",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Purpose": "PublicAccess",
              "Service": "web-frontend",
              "Team": "NeumoDiagnostics"
            },
            "tags_all": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-web-frontend-rule",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Purpose": "PublicAccess",
              "Repository": "NeumoDiagnostics-Docker-1",
              "Service": "web-frontend",
              "Team": "NeumoDiagnostics"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.main",
            "module.alb_public.aws_lb.main",
            "module.alb_public.aws_lb_listener.http",
            "module.alb_public.aws_lb_listener.https",
            "module.alb_public.aws_lb_target_group.services",
            "module.alb_public.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_public",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "web-frontend",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:566115828526:targetgroup/neumo-dev-web-frontend-tg/2c8de1e2260a53a2",
            "arn_suffix": "targetgroup/neumo-dev-web-frontend-tg/2c8de1e2260a53a2",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:566115828526:targetgroup/neumo-dev-web-frontend-tg/2c8de1e2260a53a2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:566115828526:loadbalancer/app/neumo-dev-public/babb4a25b952d36c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "neumo-dev-web-frontend-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-web-frontend-tg",
              "Owner": "student@university.edu",
              "Pattern": "HotSpare",
              "Project": "NeumoDiagnostics",
              "Purpose": "PublicAccess",
              "Scenario": "1-Replication",
              "Service": "web-frontend",
              "Team": "NeumoDiagnostics"
            },
            "tags_all": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-web-frontend-tg",
              "Owner": "student@university.edu",
              "Pattern": "HotSpare",
              "Project": "NeumoDiagnostics",
              "Purpose": "PublicAccess",
              "Repository": "NeumoDiagnostics-Docker-1",
              "Scenario": "1-Replication",
              "Service": "web-frontend",
              "Team": "NeumoDiagnostics"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c5b5be65746da882"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_public",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566115828526:security-group/sg-04622cedb5b962e05",
            "description": "Security group for public ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04622cedb5b962e05",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "neumo-dev-public-sg",
            "name_prefix": "",
            "owner_id": "566115828526",
            "revoke_rules_on_delete": false,
            "tags": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-public-sg",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Purpose": "PublicAccess",
              "Service": "web-frontend",
              "Team": "NeumoDiagnostics"
            },
            "tags_all": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-public-sg",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Purpose": "PublicAccess",
              "Repository": "NeumoDiagnostics-Docker-1",
              "Service": "web-frontend",
              "Team": "NeumoDiagnostics"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5b5be65746da882"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service_api_gateway",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566115828526:security-group/sg-0af04399fb01f9a61",
            "description": "Security group for api-gateway service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af04399fb01f9a61",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.10.0/24",
                  "10.0.20.0/24"
                ],
                "description": "Traffic from ALB/Internal",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00de5135794332a09"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "neumo-dev-api-gateway-sg",
            "name_prefix": "",
            "owner_id": "566115828526",
            "revoke_rules_on_delete": false,
            "tags": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "LoadBalancer": "Internal",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-api-gateway-sg",
              "Owner": "student@university.edu",
              "Pattern": "HotSpare",
              "Project": "NeumoDiagnostics",
              "ReplicationType": "HotSpare",
              "Scenario": "1-Availability",
              "Service": "api-gateway",
              "Team": "NeumoDiagnostics"
            },
            "tags_all": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "LoadBalancer": "Internal",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-api-gateway-sg",
              "Owner": "student@university.edu",
              "Pattern": "HotSpare",
              "Project": "NeumoDiagnostics",
              "ReplicationType": "HotSpare",
              "Repository": "NeumoDiagnostics-Docker-1",
              "Scenario": "1-Availability",
              "Service": "api-gateway",
              "Team": "NeumoDiagnostics"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5b5be65746da882"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb_internal.aws_security_group.alb",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service_auth_be",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566115828526:security-group/sg-06da2530d40c0eea5",
            "description": "Security group for auth-be service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06da2530d40c0eea5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Traffic from ALB/Internal",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "neumo-dev-auth-be-sg",
            "name_prefix": "",
            "owner_id": "566115828526",
            "revoke_rules_on_delete": false,
            "tags": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Method": "CloudMap",
              "Name": "neumo-dev-auth-be-sg",
              "Owner": "student@university.edu",
              "Pattern": "ServiceDiscovery",
              "Project": "NeumoDiagnostics",
              "Scenario": "2-Discovery",
              "Service": "auth-be",
              "Team": "NeumoDiagnostics"
            },
            "tags_all": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Method": "CloudMap",
              "Name": "neumo-dev-auth-be-sg",
              "Owner": "student@university.edu",
              "Pattern": "ServiceDiscovery",
              "Project": "NeumoDiagnostics",
              "Repository": "NeumoDiagnostics-Docker-1",
              "Scenario": "2-Discovery",
              "Service": "auth-be",
              "Team": "NeumoDiagnostics"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5b5be65746da882"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service_message_producer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566115828526:security-group/sg-0e1a8d3ece4699040",
            "description": "Security group for message-producer service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1a8d3ece4699040",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Traffic from ALB/Internal",
                "from_port": 8082,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8082
              }
            ],
            "name": "neumo-dev-message-producer-sg",
            "name_prefix": "",
            "owner_id": "566115828526",
            "revoke_rules_on_delete": false,
            "tags": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-message-producer-sg",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Service": "message-producer",
              "Team": "NeumoDiagnostics"
            },
            "tags_all": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-message-producer-sg",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Repository": "NeumoDiagnostics-Docker-1",
              "Service": "message-producer",
              "Team": "NeumoDiagnostics"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5b5be65746da882"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service_notification",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566115828526:security-group/sg-08412a49578a7075b",
            "description": "Security group for notification-be service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08412a49578a7075b",
            "ingress": [],
            "name": "neumo-dev-notification-be-sg",
            "name_prefix": "",
            "owner_id": "566115828526",
            "revoke_rules_on_delete": false,
            "tags": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-notification-be-sg",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Service": "notification-be",
              "Team": "NeumoDiagnostics",
              "Type": "Worker"
            },
            "tags_all": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-notification-be-sg",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Repository": "NeumoDiagnostics-Docker-1",
              "Service": "notification-be",
              "Team": "NeumoDiagnostics",
              "Type": "Worker"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5b5be65746da882"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service_prediagnostic",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566115828526:security-group/sg-05facc7f7c06836ff",
            "description": "Security group for prediagnostic-be service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05facc7f7c06836ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Traffic from ALB/Internal",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "neumo-dev-prediagnostic-be-sg",
            "name_prefix": "",
            "owner_id": "566115828526",
            "revoke_rules_on_delete": false,
            "tags": {
              "Budget": "minimal",
              "ClusterType": "N+1",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-prediagnostic-be-sg",
              "Owner": "student@university.edu",
              "Pattern": "ClusterN+1",
              "Project": "NeumoDiagnostics",
              "Scenario": "3-Cluster",
              "Service": "prediagnostic-be",
              "Team": "NeumoDiagnostics"
            },
            "tags_all": {
              "Budget": "minimal",
              "ClusterType": "N+1",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-prediagnostic-be-sg",
              "Owner": "student@university.edu",
              "Pattern": "ClusterN+1",
              "Project": "NeumoDiagnostics",
              "Repository": "NeumoDiagnostics-Docker-1",
              "Scenario": "3-Cluster",
              "Service": "prediagnostic-be",
              "Team": "NeumoDiagnostics"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5b5be65746da882"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service_web_frontend",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566115828526:security-group/sg-0f015e8809ae13ac3",
            "description": "Security group for web-frontend service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f015e8809ae13ac3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Traffic from ALB/Internal",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04622cedb5b962e05"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "neumo-dev-web-frontend-sg",
            "name_prefix": "",
            "owner_id": "566115828526",
            "revoke_rules_on_delete": false,
            "tags": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-web-frontend-sg",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Service": "web-frontend",
              "Team": "NeumoDiagnostics"
            },
            "tags_all": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-web-frontend-sg",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Repository": "NeumoDiagnostics-Docker-1",
              "Service": "web-frontend",
              "Team": "NeumoDiagnostics"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5b5be65746da882"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb_public.aws_security_group.alb",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.mongodb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mongodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566115828526:security-group/sg-03b127859662777b4",
            "description": "Security group for MongoDB ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b127859662777b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.10.0/24",
                  "10.0.20.0/24"
                ],
                "description": "MongoDB from ECS",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "neumo-dev-mongodb-sg",
            "name_prefix": "",
            "owner_id": "566115828526",
            "revoke_rules_on_delete": false,
            "tags": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-mongodb-sg",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Purpose": "Prediagnostic Database",
              "Service": "mongodb",
              "Team": "NeumoDiagnostics"
            },
            "tags_all": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-mongodb-sg",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Purpose": "Prediagnostic Database",
              "Repository": "NeumoDiagnostics-Docker-1",
              "Service": "mongodb",
              "Team": "NeumoDiagnostics"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5b5be65746da882"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-032b24e3e0e6c71c2",
            "arn": "arn:aws:ec2:us-east-1:566115828526:elastic-ip/eipalloc-032b24e3e0e6c71c2",
            "association_id": "eipassoc-0f5b90dc4a57016f8",
            "domain": "vpc",
            "id": "eipalloc-032b24e3e0e6c71c2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03ed4e7073fa24e40",
            "private_dns": "ip-10-0-1-188.ec2.internal",
            "private_ip": "10.0.1.188",
            "public_dns": "ec2-54-204-226-64.compute-1.amazonaws.com",
            "public_ip": "54.204.226.64",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-nat-eip-1",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Team": "NeumoDiagnostics"
            },
            "tags_all": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-nat-eip-1",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Repository": "NeumoDiagnostics-Docker-1",
              "Team": "NeumoDiagnostics"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566115828526:internet-gateway/igw-069539955b29b6229",
            "id": "igw-069539955b29b6229",
            "owner_id": "566115828526",
            "tags": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-igw",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Team": "NeumoDiagnostics"
            },
            "tags_all": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-igw",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Repository": "NeumoDiagnostics-Docker-1",
              "Team": "NeumoDiagnostics"
            },
            "vpc_id": "vpc-0c5b5be65746da882"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-032b24e3e0e6c71c2",
            "association_id": "eipassoc-0f5b90dc4a57016f8",
            "connectivity_type": "public",
            "id": "nat-061716ebe6e9156cb",
            "network_interface_id": "eni-03ed4e7073fa24e40",
            "private_ip": "10.0.1.188",
            "public_ip": "54.204.226.64",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0049864bde9be0eca",
            "tags": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-nat-us-east-1a",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Team": "NeumoDiagnostics"
            },
            "tags_all": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-nat-us-east-1a",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Repository": "NeumoDiagnostics-Docker-1",
              "Team": "NeumoDiagnostics"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566115828526:route-table/rtb-033b73d626771f969",
            "id": "rtb-033b73d626771f969",
            "owner_id": "566115828526",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-061716ebe6e9156cb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-private-rt",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Team": "NeumoDiagnostics"
            },
            "tags_all": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-private-rt",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Repository": "NeumoDiagnostics-Docker-1",
              "Team": "NeumoDiagnostics"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5b5be65746da882"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566115828526:route-table/rtb-060d1793c2b961c85",
            "id": "rtb-060d1793c2b961c85",
            "owner_id": "566115828526",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-069539955b29b6229",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-public-rt",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Team": "NeumoDiagnostics"
            },
            "tags_all": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-public-rt",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Repository": "NeumoDiagnostics-Docker-1",
              "Team": "NeumoDiagnostics"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5b5be65746da882"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02118697453180fc2",
            "route_table_id": "rtb-033b73d626771f969",
            "subnet_id": "subnet-00d977fba2a50ff40"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe6c51ff4371a21f",
            "route_table_id": "rtb-033b73d626771f969",
            "subnet_id": "subnet-03f0878632e0779f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074e715b3f29d372d",
            "route_table_id": "rtb-060d1793c2b961c85",
            "subnet_id": "subnet-0049864bde9be0eca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca0a18e4842c18b5",
            "route_table_id": "rtb-060d1793c2b961c85",
            "subnet_id": "subnet-0b166a74dfc420f44"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566115828526:subnet/subnet-00d977fba2a50ff40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d977fba2a50ff40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "566115828526",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-private-us-east-1a",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Team": "NeumoDiagnostics",
              "Type": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-private-us-east-1a",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Repository": "NeumoDiagnostics-Docker-1",
              "Team": "NeumoDiagnostics",
              "Type": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c5b5be65746da882"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566115828526:subnet/subnet-03f0878632e0779f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f0878632e0779f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "566115828526",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-private-us-east-1b",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Team": "NeumoDiagnostics",
              "Type": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-private-us-east-1b",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Repository": "NeumoDiagnostics-Docker-1",
              "Team": "NeumoDiagnostics",
              "Type": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c5b5be65746da882"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566115828526:subnet/subnet-0049864bde9be0eca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0049864bde9be0eca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "566115828526",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-public-us-east-1a",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Team": "NeumoDiagnostics",
              "Type": "public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-public-us-east-1a",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Repository": "NeumoDiagnostics-Docker-1",
              "Team": "NeumoDiagnostics",
              "Type": "public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c5b5be65746da882"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566115828526:subnet/subnet-0b166a74dfc420f44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b166a74dfc420f44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "566115828526",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-public-us-east-1b",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Team": "NeumoDiagnostics",
              "Type": "public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-public-us-east-1b",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Repository": "NeumoDiagnostics-Docker-1",
              "Team": "NeumoDiagnostics",
              "Type": "public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c5b5be65746da882"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566115828526:vpc/vpc-0c5b5be65746da882",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08e7154ffee4d2d50",
            "default_route_table_id": "rtb-03f630cb6ec08ca79",
            "default_security_group_id": "sg-0ca2a85f1b8b3f132",
            "dhcp_options_id": "dopt-03901077afe100ccb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c5b5be65746da882",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03f630cb6ec08ca79",
            "owner_id": "566115828526",
            "tags": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-vpc",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Team": "NeumoDiagnostics"
            },
            "tags_all": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-vpc",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Repository": "NeumoDiagnostics-Docker-1",
              "Team": "NeumoDiagnostics"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.rabbitmq",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rabbitmq",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566115828526:security-group/sg-0a61124158599cb83",
            "description": "Security group for RabbitMQ ECS service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a61124158599cb83",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.10.0/24",
                  "10.0.20.0/24"
                ],
                "description": "AMQP from private subnets",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5672
              },
              {
                "cidr_blocks": [
                  "10.0.10.0/24",
                  "10.0.20.0/24"
                ],
                "description": "RabbitMQ Management UI",
                "from_port": 15672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 15672
              }
            ],
            "name": "neumo-dev-rabbitmq-sg",
            "name_prefix": "",
            "owner_id": "566115828526",
            "revoke_rules_on_delete": false,
            "tags": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-rabbitmq-sg",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Purpose": "Message Broker",
              "Service": "rabbitmq",
              "Team": "NeumoDiagnostics"
            },
            "tags_all": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-rabbitmq-sg",
              "Owner": "student@university.edu",
              "Project": "NeumoDiagnostics",
              "Purpose": "Message Broker",
              "Repository": "NeumoDiagnostics-Docker-1",
              "Service": "rabbitmq",
              "Team": "NeumoDiagnostics"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5b5be65746da882"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566115828526:security-group/sg-02a146ad06f941797",
            "description": "Security group for RDS PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a146ad06f941797",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.10.0/24",
                  "10.0.20.0/24"
                ],
                "description": "PostgreSQL from ECS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "neumo-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "566115828526",
            "revoke_rules_on_delete": false,
            "tags": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "FailoverType": "WarmSpare",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-rds-sg",
              "Owner": "student@university.edu",
              "Pattern": "DatabaseFailover",
              "Project": "NeumoDiagnostics",
              "Scenario": "4-Failover",
              "Team": "NeumoDiagnostics"
            },
            "tags_all": {
              "Budget": "minimal",
              "Course": "Software Architecture",
              "Environment": "dev",
              "FailoverType": "WarmSpare",
              "ManagedBy": "Terraform",
              "Name": "neumo-dev-rds-sg",
              "Owner": "student@university.edu",
              "Pattern": "DatabaseFailover",
              "Project": "NeumoDiagnostics",
              "Repository": "NeumoDiagnostics-Docker-1",
              "Scenario": "4-Failover",
              "Team": "NeumoDiagnostics"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5b5be65746da882"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}